Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Index
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to the CyberLegends'
 ---
 
 <img
