Documentation edits made through Mintlify web editor

--- a/home.mdx
+++ b/home.mdx
@@ -1,5 +1,5 @@
 ---
-title: Home
+title: Index
 description: 'Welcome to the CyberLegends'
 ---
 
@@ -14,52 +14,58 @@ description: 'Welcome to the CyberLegends'
   alt="Hero Dark"
 />
 
-## How may we assist you?
+## Setting up
 
-As hunters, we specialize in identifying potential security vulnerabilities in your system. We are ready to report our findings and actively contribute to enhancing the security of your platform.
+The first step to world-class documentation is setting up your editing environments.
 
 <CardGroup cols={2}>
   <Card
-    title="What exactly's cybersecurity?"
+    title="Edit Your Docs"
     icon="pen-to-square"
+    href="https://mintlify.com/docs/quickstart"
   >
-    Explaining the essence of cybersecurity succinctly
+    Get your docs set up locally for easy development
   </Card>
   <Card
-    title="Security Fundamentals"
+    title="Preview Changes"
     icon="image"
+    href="https://mintlify.com/docs/development"
   >
-    Basics of cybersecurity for online safety.
+    Preview your changes before you push to make sure they're perfect
   </Card>
 </CardGroup>
 
-## Make it yours
+## Stay secure with us:
 
-Update your docs to your brand and add valuable content for the best user conversion.
+We aid you and your business in safety and beyond.
 
 <CardGroup cols={2}>
   <Card
-    title="Bug Bounty Program"
+    title="Customize Style"
     icon="palette"
+    href="https://mintlify.com/docs/settings/global"
   >
-    Reporting and rewarding security vulnerabilities.
+    Customize your docs to your company's colors and brands
   </Card>
   <Card
-    title="Security Reporting Initiative"
+    title="Reference APIs"
     icon="code"
+    href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Encouraging community to report vulnerabilities for rewards.
+    Automatically generate endpoints from an OpenAPI spec
   </Card>
   <Card
-    title="Vulnerability Disclosure Program"
+    title="Add Components"
     icon="screwdriver-wrench"
+    href="https://mintlify.com/docs/components/accordion"
   >
-    Reporting security flaws for rewards and collaboration.
+    Build interactive features and designs to guide your users
   </Card>
   <Card
-    title="Bounty Hunting Initiative"
+    title="Get Inspiration"
     icon="stars"
+    href="https://mintlify.com/customers"
   >
-    Finding and reporting system vulnerabilities for rewards.
+    Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
