Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -14,24 +14,22 @@ description: 'Welcome to the CyberLegends'
   alt="Hero Dark"
 />
 
-## Setting up
+## What exactly is cybersecurity?
 
-The first step to world-class documentation is setting up your editing environments.
+Explaining the essence of cybersecurity succinctly.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="Bug Bounty Program"
     icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+    Reporting and rewarding security vulnerabilities.
   </Card>
   <Card
-    title="Preview Changes"
+    title="Security Reporting Initiative"
     icon="image"
-    href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    Encouraging community to report vulnerabilities for rewards.
   </Card>
 </CardGroup>
 
@@ -41,31 +39,27 @@ Update your docs to your brand and add valuable content for the best user conver
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
+    title="Vulnerability Disclosure Program"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
   >
-    Customize your docs to your company's colors and brands
+    Reporting security flaws for rewards and collaboration.
   </Card>
   <Card
-    title="Reference APIs"
+    title="Security Rewards Initiative"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Incentivizing reporting of system vulnerabilities.
   </Card>
   <Card
-    title="Add Components"
+    title="Bounty Hunting Initiative"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
   >
-    Build interactive features and designs to guide your users
+    Finding and reporting system vulnerabilities for rewards.
   </Card>
   <Card
     title="Get Inspiration"
     icon="stars"
-    href="https://mintlify.com/customers"
   >
-    Check out our showcase of our favorite documentation
+    Explore our curated blogs featuring our top security picks.
   </Card>
 </CardGroup>
