Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -33,9 +33,9 @@ Explaining the essence of cybersecurity succinctly.
   </Card>
 </CardGroup>
 
-## Make it yours
+## Stay secure with us:
 
-Update your docs to your brand and add valuable content for the best user conversion.
+We aid you and your business in safety and beyond.
 
 <CardGroup cols={2}>
   <Card
